welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: not found: value estFaceEau
while (estFaceEau==false) {
       ^