welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
while (estFaceEau==false) {
	avance()

}
gauche()
avance(2)
droite()